# Testing

./: README.md
0.1 HMTL/Styles/: Page2.html  index.html  style.css
bitcat-morph/: db.db  pyproject.toml
bitcat-morph/src/bitcat_morph/: database.py  main.py
