[project]
name = "bitcat-morph"
version = "0.1.0"
description = "A  time travelling game and use some inspiration from Vision Soft Reset for its concentrated algorithms and critical-thinking systems"
authors = [
    {name = "Sk517-afk",email = "19iriskerrey@georgesalter.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bitcat_morph", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
